--- a/HomeworkBYUI/inst/rmarkdown/templates/real_analysis/resources/real_analysis_template.tex
+++ b/HomeworkBYUI/inst/rmarkdown/templates/real_analysis/resources/real_analysis_template.tex
@@ -1,28 +1,234 @@
-\documentclass[12pt,english]{article}
-\usepackage{amsmath}
-\usepackage{amssymb}
-\usepackage[letterpaper]{geometry}
+% BYU-Idaho LaTeX/Rmarkdown Homework Template
+% Dylan McDowell - December 2017
+% Github: https://github.com/dylanjm
+% Rtemplates - HomeworkBYUI
+% devtools::install_github("dylanjm/Rtemplates", subdir = "HomeworkBYUI")
+%
+% To be used for primarily Mathematics & Computer Science Homework.
+% most values are hardcoded into the LaTeX template and not dynamic
+% from the .RMD YAML.
+%
+% Homework Details
+%   - Title
+%   - Date
+%   - Author
+%   - Class
+%   - Professor
+%   - Due Date
+%   - Topic
+%   - Misc
+%
+\documentclass[11pt, letterpaper]{article}
+\usepackage[T1]{fontenc}
+\usepackage{mathptmx} % font
+\usepackage[margin=1in, headsep=.35in]{geometry}
+
+
+\usepackage{graphicx,grffile}
+\makeatletter
+\def\maxwidth{\ifdim\Gin@nat@width>\linewidth\linewidth\else\Gin@nat@width\fi}
+\def\maxheight{\ifdim\Gin@nat@height>\textheight\textheight\else\Gin@nat@height\fi}
+\makeatother
+% Scale images if necessary, so that they will not overflow the page
+% margins by default, and it is still possible to overwrite the defaults
+% using explicit options in \includegraphics[width, height, ...]{}
+\setkeys{Gin}{width=\maxwidth,height=\maxheight,keepaspectratio}
+% set default figure placement to htbp
+\makeatletter
+\def\fps@figure{htbp}
+\makeatother
+
 \usepackage{tikz}
+\usetikzlibrary{positioning, calc, fit}
+\usetikzlibrary{shapes,backgrounds}
+\usepackage{xcolor}
+\usepackage{soul}
+\usepackage{mathtools}
+\usepackage{tikz-qtree}
+\usepackage{wasysym}
+\usepackage{tcolorbox}
+\usepackage{fancyhdr}
+\usepackage{lastpage}
+\usepackage{titlesec}
+\usepackage{enumitem}
+\usepackage{multicol}
+\usepackage{amssymb}
+\usepackage{enumitem}
+\usepackage{tasks}
+\usepackage{mathrsfs}
+\usepackage{extramarks}
+\usepackage{subcaption}
+\usepackage{array}
+\usepackage{tabularx}
+\usepackage[symbol]{footmisc}
+
 \usetikzlibrary{arrows}
 \usetikzlibrary{shapes}
 \newcommand{\mymk}[1]{%
 	\tikz[baseline=(char.base)]\node[anchor=south west, draw, rectangle, rounded corners, inner sep=1pt, minimum size=5mm,
 	text height=3mm](char){\ensuremath{#1}} ;}
-\geometry{verbose,tmargin=0.8in,bmargin=0.8in,lmargin=1in,rmargin=1in}
-\setlength{\parskip}{0.1in}
+
+\newcommand{\mathcolorbox}[2]{\colorbox{#1}{$$\displaystyle #2$$}}
+\newcommand\proba{P(A)}
+\newcommand\probb{P(B)}
+\newcommand{\probint}[2]{P(#1 \cap #2)}
+\newcommand{\probun}[2]{P(#1 \cup #2)}
+\newcommand{\conprob}[2]{P(#1 | #2)}
+\newcommand{\bayes}[2]{\frac{P(#2 | #1)P(#1)}{P(#2)}}
+\newcommand\Myperm[2][^n]{\prescript{#1\mkern-2.5mu}{}P_{#2}}
+\newcommand\Mycomb[2][^n]{\prescript{#1\mkern-0.5mu}{}C_{#2}}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Initialize Verbatim Settings & Microtype
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% use upquote if available, for straight quotes in verbatim environments
+\IfFileExists{upquote.sty}{\usepackage{upquote}}{}
+\IfFileExists{microtype.sty}{% use microtype if available
+\usepackage[protrusion=true,expansion=true]{microtype}
+\UseMicrotypeSet[protrusion]{basicmath} % disable protrusion for tt fonts
+}{}
+$if(verbatim-in-note)$
+\VerbatimFootnotes % allows verbatim text in footnotes
+$endif$
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Dealing with URLS, Links, Meta Data
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\PassOptionsToPackage{hyphens}{url} % url is loaded by hyperref
+\usepackage[unicode=true]{hyperref}
+\PassOptionsToPackage{usenames,dvipsnames}{color} % color is loaded by hyperref
+\hypersetup{pdftitle={$title$},
+            pdfauthor={$author$},
+            pdfkeywords={$class$},
+            colorlinks=true, linkcolor=., citecolor=maroon, urlcolor=blue,
+            breaklinks=true}
+\urlstyle{same}  % don't use monospace font for urls
+
+$if(listings)$
+\usepackage{listings}
+$endif$
+
+$if(highlighting-macros)$
+$highlighting-macros$
+$endif$
+
+$if(tables)$
+\usepackage{longtable,booktabs}
+% Fix footnotes in tables (requires footnote package)
+\IfFileExists{footnote.sty}{\usepackage{footnote}\makesavenoteenv{long table}}{}
+$endif$
+
+$if(indent)$
+$else$
+\IfFileExists{parskip.sty}{%
+\usepackage{parskip}
+}{% else
 \setlength{\parindent}{0pt}
+\setlength{\parskip}{6pt plus 2pt minus 1pt}
+}
+$endif$
+
+\setlength{\emergencystretch}{3em}  % prevent overfull lines
+\providecommand{\tightlist}{%
+  \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
+
+$if(numbersections)$
+\setcounter{secnumdepth}{$if(secnumdepth)$$secnumdepth$$else$5$endif$}
+$else$
+\setcounter{secnumdepth}{0}
+$endif$
+
+$if(subparagraph)$
+$else$
+% Redefines (sub)paragraphs to behave more like sections
+\ifx\paragraph\undefined\else
+\let\oldparagraph\paragraph
+\renewcommand{\paragraph}[1]{\oldparagraph{#1}\mbox{}}
+\fi
+\ifx\subparagraph\undefined\else
+\let\oldsubparagraph\subparagraph
+\renewcommand{\subparagraph}[1]{\oldsubparagraph{#1}\mbox{}}
+\fi
+$endif$
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Setting up Section Spacing for Homework Problem Environment
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\titlespacing\section{0pt}{12pt plus 4pt minus 3pt}{0pt plus 2pt minus 3pt}
+\titlespacing\subsection{0pt}{12pt plus 4pt minus 3pt}{0pt plus 2pt minus 3pt}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Setting up Homework Inputs
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\newcommand{\hmwkTitle}{$title$}
+\newcommand{\hmwkDueDate}{$due$}
+\newcommand{\hmwkClass}{$class$}
+\newcommand{\hmwkClassTime}{- Section $section$}
+\newcommand{\hmwkClassInstructor}{Professor $professor$}
+\newcommand{\hmwkAuthorName}{\textbf{$author$}}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Title Page
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\title{
+    \vspace{2in}
+    \textmd{\textbf{\hmwkClass:\ \hmwkTitle}}\\
+    \normalsize\vspace{0.1in}\small{Due\ on\ \hmwkDueDate}\\
+    \vspace{0.1in}\large{\textit{\hmwkClassInstructor\ \hmwkClassTime}} \\
+    \vspace{0.1in}\large{\textbf{\hmwkAuthorName}}
+    \vspace{3in}
+}
+
+
+\fancypagestyle{fullstyle}
+{
+  \fancyhf{}
+  \fancyhead[RE,RO]{\small $author$ \\ \thepage\//\pageref{LastPage}}
+}
+
+\fancypagestyle{firststyle}
+{
+   \fancyhf{}
+   \fancyhead[C]{\raisebox{5ex}{\small $hours$}}
+   \fancyhead[LO,LE]{\small $title$ \\ $topic$ \\ $misc$}
+   \fancyhead[RE,RO]{\small $author$ \\ $class$-$section$ \\ $due$}
+}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Set Task Formatting
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\DeclareInstance{tasks}{alphabetize-parens}{default}{
+  counter-format = { (tsk[a]) }
+}
+
+\renewcommand{\thefootnote}{\fnsymbol{footnote}}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Solution Environment
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\newenvironment{solution}
+  {\begin{tcolorbox}[title=Solution:,colback=white, fonttitle=\small\bfseries]}
+  {\end{tcolorbox}}
+
+\newcommand{\exercise}[1]{\section{\underline{Exercise #1}}}
+
+\pagestyle{fullstyle}
 
 \begin{document}
 
+$if(title-page)$
+\maketitle
 \thispagestyle{empty}
+\clearpage
+\pagenumbering{arabic}
+$endif$
 
-\begin{center}
-	HW 1 \hfill 1.5 hours \hfill Dylan McDowell\\
-	\vspace{1mm}
-	\mymk{1.2.8} , 6ab, 12 \hfill M461-02\\
-	\vspace{1mm}
-	1.3.8, 9 \hfill Sep 21, 2018
-\end{center}
 
+
+\settasks{style=alphabetize-parens}
+
+\thispagestyle{firststyle}
+
+$body$
 
 \end{document}
