changes to skeleton format

--- a/HomeworkBYUI/inst/rmarkdown/templates/real_analysis/skeleton/skeleton.rmd
+++ b/HomeworkBYUI/inst/rmarkdown/templates/real_analysis/skeleton/skeleton.rmd
@@ -12,33 +12,44 @@ misc: "problems"
 title-page: false
 output: HomeworkBYUI::real_analysis_pdf
 ---
-<!-- Question 01 -->
+<!------------------------------------------------------------------------------>
+<!------------------------------- Question 01 ---------------------------------->
+<!------------------------------------------------------------------------------>
 \exercise{}
 
 \newpage
-<!-- Question 02 -->
+<!------------------------------------------------------------------------------>
+<!------------------------------- Question 02 ---------------------------------->
+<!------------------------------------------------------------------------------>
 \exercise{}
 
 \newpage
-<!-- Question 03 -->
+<!------------------------------------------------------------------------------>
+<!------------------------------- Question 03 ---------------------------------->
+<!------------------------------------------------------------------------------>
 \exercise{}
 
 \newpage
-<!-- Question 04 -->
+<!------------------------------------------------------------------------------>
+<!------------------------------- Question 04 ---------------------------------->
+<!------------------------------------------------------------------------------>
 \exercise{}
 
 \newpage
-<!-- Question 05 -->
+<!------------------------------------------------------------------------------>
+<!------------------------------- Question 05 ---------------------------------->
+<!------------------------------------------------------------------------------>
 \exercise{}
 
 \newpage
-<!-- Question 06 -->
+<!------------------------------------------------------------------------------>
+<!------------------------------- Question 06 ---------------------------------->
+<!------------------------------------------------------------------------------>
 \exercise{}
 
 \newpage
-<!-- Question 06 -->
+<!------------------------------------------------------------------------------>
+<!------------------------------- Question 07 ---------------------------------->
+<!------------------------------------------------------------------------------>
 \exercise{}
 
-\newpage
-<!-- Question 07 -->
-\exercise{}
