added halloween symbols

--- a/HomeworkBYUI/inst/rmarkdown/templates/real_analysis/resources/real_analysis_template.tex
+++ b/HomeworkBYUI/inst/rmarkdown/templates/real_analysis/resources/real_analysis_template.tex
@@ -61,6 +61,7 @@
 \usepackage{array}
 \usepackage{tabularx}
 \usepackage[symbol]{footmisc}
+\usepackage{halloweenmath}
 
 \usetikzlibrary{arrows}
 \usetikzlibrary{shapes}
