--- a/HomeworkBYUI/inst/rmarkdown/templates/real_analysis/resources/real_analysis_template.tex
+++ b/HomeworkBYUI/inst/rmarkdown/templates/real_analysis/resources/real_analysis_template.tex
@@ -21,6 +21,7 @@
 \documentclass[11pt, letterpaper]{article}
 \usepackage[T1]{fontenc}
 \usepackage{mathptmx} % font
+\usepackage{amsmath}
 \usepackage[margin=1in, headsep=.35in]{geometry}
 
 
