--- a/HomeworkBYUI/inst/rmarkdown/templates/real_analysis/resources/real_analysis_template.tex
+++ b/HomeworkBYUI/inst/rmarkdown/templates/real_analysis/resources/real_analysis_template.tex
@@ -78,6 +78,7 @@
 \newcommand{\bayes}[2]{\frac{P(#2 | #1)P(#1)}{P(#2)}}
 \newcommand\Myperm[2][^n]{\prescript{#1\mkern-2.5mu}{}P_{#2}}
 \newcommand\Mycomb[2][^n]{\prescript{#1\mkern-0.5mu}{}C_{#2}}
+\newcommand{\floor}[1]{\left\lfloor #1 \right\rfloor}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Initialize Verbatim Settings & Microtype
