--- a/HomeworkBYUI/inst/rmarkdown/templates/real_analysis/resources/real_analysis_template.tex
+++ b/HomeworkBYUI/inst/rmarkdown/templates/real_analysis/resources/real_analysis_template.tex
@@ -41,6 +41,7 @@
 \usepackage{tikz}
 \usetikzlibrary{positioning, calc, fit}
 \usetikzlibrary{shapes,backgrounds}
+\usepackage{pgfplots}
 \usepackage{xcolor}
 \usepackage{soul}
 \usepackage{mathtools}
